0.12
 - Add Property datatype.
 - Add test instance for Property.
 - Fix minimal version of List::Util with none().
 - Fix versions in test instances.

0.11 2022-05-28T15:13:50+02:00
 - Add test instances.
 - Fix check_language().
 - Fix Unicode conversions in Item doc example.
 - Improve example in Form documentation.
 - Improve example in Sense documentation.
 - Update copyright years.

0.10 2021-07-17T15:11:15+02:00
 - Add test for Wikibase::Datatype::Value::Monolingual with utf8 text.
 - Improve doc for Snak.

0.09 2021-07-13T14:06:21+02:00
 - Add check_language() helper for check ISO 639-1 language code.
 - Add check for ISO 639-1 language code to
   Wikibase::Datatype::Value::Monolingual.
 - Fix doc for Snak 'datavalue' parameter.
 - Fix sentences in doc of Wikibase::Datatype::Utils.
 - Fix usage of Error::Pure::err in Value/* classes.

0.08 2021-01-26T21:24:31+01:00
 - Rewrite example in doc for Mediainfo to some real.
 - Rewrite exmaple in doc for MediainfoSnak to some real.
 - Rewrite example in doc for MediainfoStatement to some real.

0.07 2021-01-26T13:28:48+01:00
 - Add Mediainfo datatype.
 - Add MediainfoSnak datatype. There is difference between normal Snak in
   requirements of datatype.
 - Add MediainfoStatement datatype. There is difference between normal
   Statement in use of Snak and references.
 - Add id parameter and id() method to Statement.
 - Fix doc of Datatype.
 - Fix tests for Snak (there isn't datavalue for somevalue and novalue).
 - Improve doc example for Snak by adding of snaktype.
 - Update copyright years.

0.06 2021-01-14T18:43:21+01:00
 - Fix doc in Lexeme.
 - Fix negative coordinate.
 - Improve doc for Snak (added datatype values).

0.05 2020-12-23T15:41:04+01:00
 - Improve doc for Lexeme.

0.04 2020-12-20T02:27:02+01:00
 - Add check_lexeme() to Utils.
 - Add helper to Utils and rewrite to it.
 - Add link to Wikidata::Datatype::Struct in doc.
 - Fix SYNOPSIS section in doc of Utils.
 - Fix indentation in EXAMPLE in Item doc.
