@@ -3,6 +3,7 @@
  - Add test instance for Property.
  - Fix minimal version of List::Util with none().
  - Fix versions in test instances.
+ - Improve test instance for Human item.
 
 0.11 2022-05-28T15:13:50+02:00
  - Add test instances.
